src/_components/AsidePhoto/AsidePhoto.module.css
.container {
    display: flex;
    flex-direction: column;
    width: 50%;
    max-width: 200px;
    padding-right: 0.5rem;
    margin-right: 0.5rem;
    float: left;
    font-style: italic;
    color: #29627e;
}

.containerRight {
    float: right;
    padding-right: 0;
    padding-left: 0.5rem;
    margin-right: 0;
    margin-left: 0.5rem;
}

.caption {
    font-size: smaller;
    text-align: center;
}

.photo {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

